--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./css/main.css"/>
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="bg top">
+    </div>
+    <div class="bg bot"></div>
+      <main class="main flex justify-between align-center">
+        <figure class="left-column flex justify-center align-center">
+          <img src="./images/phones.png" alt="mock-up of an iphone">
+        </figure>
+        <div class="right-column flex column justify-between">
+          <div class="login-container flex justify-between align-center">
+            <figure>
+              <img src="./images/brand.png" alt="Instagram logo">
+            </figure>
+            <div class="login-buttom flex justify-between align-center">
+              <figure>
+                <img src="./images/home.png" alt="home icon">
+              </figure>
+              <strong><a href="#">Log in</a></strong>
+            </div>
+          </div>
+          <article class="article-bg">
+            <div class="white-box"></div>
+            <h1>Capture and Share 
+              <br> the World's Moments</h1>
+            <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </article>
+          <div class="download-now flex left">
+            <img src="./images/badge-iphone.png" alt="buttom to download app at Apples' app store">
+            <img src="./images/badge-android.png" alt="buttom to download app at google's play store">
+          </div>
+        </div>
+      </main>
+      <footer>
+        <ul class="flex justify-around">
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>© 2014 Instagram</li>
+        </ul>
+      </footer>
+  </body>
 </html>
