layout done - started testing responsivity

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="colored-background"></div>
+  <div class="content">
+    <figure>
+      <img src="./images/phones.png" alt="iphones with instagram app open" id="iphones">
+    </figure>
+    <div class="description">
+      <header class="main-width">
+        <div class="header main-width">
+          <figure>
+            <img src="./images/brand.png" alt="instagram's logo">
+          </figure>
+          <a href="#" class="login">
+            <div>
+              <img src="./images/home.png" alt="home icon">
+              <p>Log In</p>
+            </div>
+          </a>
+        </div>
+      </header>
+      <div class="text-background main-width">
+        <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="download-links">
+          <figure>
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          </figure>
+          <figure>
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </figure>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="nav-bar">
+        <div class="navigation">
+          <ul class="uppercase">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+          </ul>
+        </div>
+        <div class="copyright">
+          <p class="uppercase">&copy; 2014 Instagram</p>
+        </div>
+      </div>
+  </footer>
 </body>
 </html>
