--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div id="header">
+    <img src="./images/bgtile.png" alt="bgtile">
+  </div>
+  <div class="main-container">
+    <img src="./images/phones.png" alt="phones">
+    <div class="logo-container">
+      <div class="logo-botton-container">
+        <img src="./images/brand.png" alt="Instagram">
+        <button class="button">
+          <img src="./images/home.png" alt="home">
+          Log In
+        </button>
+      </div>
+      <div class="text-container">
+        <h1>Capture and Share<br>the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>
+          Instagram is a<strong> fast,beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
 
-  Oh yeah, did we mention it's free?
+        <div class="download-container">
+          <img class="logo-apple" src="./images/badge-iphone.png" alt="badge-iphone">
+          <img src="./images/badge-android.png" alt="badge-android">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer-container">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
