layout done - testing done - classes names done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
     <figure>
       <img src="./images/phones.png" alt="iphones with instagram app open" id="iphones">
     </figure>
-    <div class="description">
+    <div class="main-content">
       <header class="main-width">
         <div class="header main-width">
           <figure>
@@ -45,7 +45,7 @@
   </div>
   <footer>
     <div class="nav-bar">
-        <div class="navigation">
+        <div class="nav-links">
           <ul class="uppercase">
             <li><a href="#">About Us</a></li>
             <li><a href="#">Support</a></li>
