--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,7 +32,7 @@
               </figure>
             </div>
             <div>
-              <p>
+              <p id="login">
                 Log in
               </p>
             </div>
@@ -67,7 +67,7 @@
   </section>
   
   <footer>
-    <ul>
+    <ul id= menuRodape>
         <il> About Us </il>
         <il> Support </il>
         <il> Blog </il>
