First commit - Instagram Clone

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <header>
+    <div class="blue-top-background">
+      
+    </div>
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="body">
+    <div class="content">
+      <div class="phones">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="right-side">
+        <div class="rs-header">
+          <div class="rs-logo">
+            <img src="./images/brand.png" alt="">
+          </div>
+          <div class="rs-buttom">
+            <div><img src="./images/home.png"> Log in</div>
+          </div>
+        </div>
+        <div class="white-box">
+          <h2>Capture and Share<br>
+              the World's Moments</h2>
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br>
+                <br>
+                  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <br><br>
+                  Oh yeah, did we mention it's free?<br></p>
+                  <img src="./images/badge-iphone.png" alt="badge-iphone"> &ensp;
+                  <img src="./images/badge-android.png" alt="badge-android">
+        </div>
+      </div>
+    </div>
+    
+    <div class="footer"><br><br>
+      <ul class="footer-ul">
+        <li><a href="#">About Us</li></a>
+        <li><a href="#">Support</li></a>
+        <li><a href="#">Blog</li></a>
+        <li><a href="#">Press</li></a>
+        <li><a href="#">API</li></a>
+        <li><a href="#">Jobs</li></a>
+        <li><a href="#">Privacy</li></a>
+        <li><a href="#">Terms</li></a>
+        <li> &copy; 2014 Instagram</li>
+      </ul>
+    </div>-->
+  </section>
+  
+ 
+  
+  
+  
+ 
+ 
+  
+  
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
