--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,21 +6,21 @@
 </head>
 
 <body>
-
 <div class="fundoazul">
-
 <div class="container">
-
 <div class="celular">
 
 <img src="./images/phones.png" alt="imagem-celular">
 </div>
 
 <div class="text">
-
+<div class="logoebutton">
 <img src="./images/brand.png" alt="imagem-logo">
+<button><img src="./images/home.png" alt=""> <stron>Log in</stron></button>
+</div>
 <img src="./images/frame.png" alt="frame-aonde-esta-o-texto">
 
+  
 </div>
 
 <div class="content" >
