correção do tamanho do rodapé

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -24,7 +24,8 @@
         <h1>Capture and Share<br>the World's Moments</h1>
 
         <p>
-          Instagram is a<strong> fast,beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+          Instagram is a<strong> fast,beautiful</strong> and <strong>fun</strong> way to share your life with friends
+          and family.
         </p>
 
         <p>
@@ -57,8 +58,6 @@
       <li>&copy; 2014 Instagram</li>
     </ul>
   </footer>
-
-
 </body>
 
 </html>
