--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,15 +6,13 @@
 </head>
 <body>
   <section class="main">
-    <div class="azul">
-      
-    </div>
-    <div class="main2">
-      <figure class="iphone">
+    <div class="bg-azul"> </div> <!--div pra colocar a imagem de fundo azul-->
+    <div class="main-body"> <!--div que engloba todo o corpo-->
+      <figure class="iphone-img">
           <img src="/images/phones.png" alt="iphones">
         </figure>
-        <div class="main3">
-      <div class="logo">
+        <div class="main3"> <!--div para colocar todos os outros conteúdos-->
+      <div class="logo"> <!--div para o logo-->
           <figure class="insta-logo">
             <img src="images/brand.png" alt="instagram logo">
           </figure> 
@@ -23,7 +21,7 @@
             <p>Log in</p>
         </button>
       </div>
-      <div class="content">
+      <div class="content"> <!--div para colocar o BG-IMG e o texto-->
         <h2>Capture and Share the World's Moments
           </h2>
         <p> Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
@@ -31,7 +29,7 @@
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           
         <p>Oh yeah, did we mention it's free?</p> 
-        <div class="download">
+        <div class="download"> <!--div imagens de download-->
           <figure class="apple">
             <img src="/images/badge-iphone.png" alt="">
           </figure>
@@ -62,19 +60,5 @@
         &copy; 2014 Instagram
       </span>
       </footer>
-
-  <!-- Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-
-    -->
 </body>
 </html>
