--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,29 +3,49 @@
 <head>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body class="top-blue-background">
 
-  Capture and Share the World's Moments
+<link rel="stylesheet" href="css/main.css">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div id="main">
+    <div id="left">
+      <img class="img-phones" src="images/phones.png" alt="Phones">
+    </div>
+    <div id="right">
+        <header> 
+              <img class="img-logo" src="images/brand.png" alt="Logo">
+              <span class="login">
+                  <img src="images/home.png" alt="House">
+                  Log in
+              </span>
+          </header>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <section id="capture-moments">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <!-- BUTTONS -->
+          <div>
+            <img src="images/badge-iphone.png" alt="Download on the App Store">
+            <img src="images/badge-android.png" alt="Get it on Google Play">
+          </div>
+        </section>
+    </div>
+  </div>
+  <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li class="grey-override">&copy; 2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+    <div id ="top blue background"></div>
 </body>
 </html>
