--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div  id="headermovile"  class="top">
+      <img class="fono" src="images/phones.png"/>
+    <div class="header">
+          <img src="images/brand.png" alt="brand">
+      </div>
+        <div class="log-in">
+         <img src="/starter-code/images/home.png">
+          <h3>Log in</h3>
+        </div>
+    </div>
+    <div class="text-box">
+  
+     <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Oh yeah, did we mention it's free?</p>
+  <img src="/starter-code/images/badge-iphone.png"/>
+  <img src="/starter-code/images/badge-android.png"/>
+      </div>
+</div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <footer>
+    <ul>
+    <li>About Us</li> 
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li> API</li>
+    <li>  Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+   </ul>
 
-  &copy; 2014 Instagram
+  <p>&copy; 2014 Instagram</p>
+</footer>
 </body>
 </html>
