--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
 </head>
+
 <body>
+  <h1>Instagram</h1>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic corporis, error incidunt exercitationem minus nihil,
+    alias sit dolorum, quae delectus molestiae. Fuga optio cumque ratione perferendis aliquid possimus laudantium sed?
+  </p>
   Instagram
 
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+  easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
 
@@ -28,4 +35,5 @@
 
   &copy; 2014 Instagram
 </body>
+
 </html>
