--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"/>
+  <link rel="stylesheet" href="./css/main.css"/>
   <title>Instagram</title>
 </head>
 <body>
+  <div class="color">
+    <div class="container">
+      
+      <section class="sectionMain">
+        <div class="caja1"> 
+          <img class="phone" src="./images/phones.png" alt="spotify-logo"> 
+        </div>
+        <div class="caja2"> 
+          <div >
+            <img class="spotify-logo" src="./images/brand.png" alt="spotify-logo">
+          </div>
+          <img class="frame" src="./images/frame.png" alt="spotify-logo">
+        </div>
+      </section>
+
+      <nav>
+        &copy; 2014 Instagram
+      </nav>
+    </div>
+  </div>
+
+</body>
+</html>
+
+
+<!-- 
+
+  <img class="spotify-logo" src="./images/badge-android.png" alt="spotify-logo">
+  <img class="spotify-logo" src="./images/badge-iphone.png" alt="spotify-logo">
+  <img class="spotify-logo" src="./images/bgtile.png" alt="spotify-logo">
+            
+  <img class="spotify-logo" src="./images/brand.png" alt="spotify-logo">
+  <img class="spotify-logo" src="./images/home.png" alt="spotify-logo">
+
+
   Instagram
 
   Capture and Share the World's Moments
@@ -26,6 +66,4 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
-</body>
-</html>
+-->
