--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,16 +17,42 @@
           <img class="phone" src="./images/phones.png" alt="spotify-logo"> 
         </div>
         <div class="caja2"> 
-          <div >
+
+          <div>
             <img class="spotify-logo" src="./images/brand.png" alt="spotify-logo">
+            <button class="button"> 
+              <img class="spotify-logo" src="./images/home.png" alt="spotify-logo">
+              Log In
+            </button>
           </div>
-          <img class="frame" src="./images/frame.png" alt="spotify-logo">
-        </div>
+
+          <section class="sectionFrame">
+            <div class="frame"> 
+              <h4> Instagram </h4>
+              <p>Capture and Share the World's Moments</p>
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>  
+          </section>
+
+          </div>
       </section>
 
       <nav>
-        &copy; 2014 Instagram
+        <ul>
+          <li> About Us </li>
+          <li> Support </li>
+          <li> Blog </li>
+          <li> Press </li>
+          <li> API </li>
+          <li> Jobs </li>
+          <li> Privacy </li>
+          <li> Terms </li>
+          <li> &copy; 2014 Instagram </li>
+        </ul>
       </nav>
+            
     </div>
   </div>
 
@@ -35,35 +61,9 @@
 
 
 <!-- 
-
+                Download on the App Store
+              Get it on Google Play
   <img class="spotify-logo" src="./images/badge-android.png" alt="spotify-logo">
   <img class="spotify-logo" src="./images/badge-iphone.png" alt="spotify-logo">
   <img class="spotify-logo" src="./images/bgtile.png" alt="spotify-logo">
-            
-  <img class="spotify-logo" src="./images/brand.png" alt="spotify-logo">
-  <img class="spotify-logo" src="./images/home.png" alt="spotify-logo">
-
-
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
 -->
