--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,41 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <div class="main">
+    <img src="./images/phones.png" alt="Telefonos">
+    <div class="container">
+      <header>
+        <h1 class="h1-bar"><img class="logo" src="./images/brand.png" alt="Logo Instagram"></h1>
+        <a href="#" class="house-link"><img src="./images/home.png" alt="Home button">Log in</a>
+      </header>
+      <section class="info">
+        <img src="./images/frame.png" alt="Decoration">
+        <div class="text-info">          
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <a href="#"><img src="./images/badge-android.png" alt="Download on the App Store"></a>
+          <a href="#"><img src="./images/badge-iphone.png" alt="Get it on Google Play"></a>
+        </div>
+      </section>
+    </div>
+  </div>
+  <footer>
+    <ul class="footer-list">
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support </a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+    </ul>
+    <p class="copyright">&copy; 2014 Instagram</p> 
+  </footer>
+</body class="footer-list">
 </html>
