--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  
+  <div class="top-color-layer"></div>
+  <div class="main-container">
+    <div class="img-device-container">
+      <img src="images\phones.png" class="img-device" alt="">
+    </div>
+    <div class="content">
+      <div class="logo-login-container">
+        <img src="images\brand.png" class="img-logo" alt="instagram logo">
+        <div class="login-button">
+          <img src="images\home.png" class="img-home" alt="Home"> 
+          Log in
+        </div>
+      </div>
+        <div class="presentation"> 
+          <h1>Capture and Share 
+            <br> the World's Moments</h1>
+            Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            <br><br>Oh yeah, did we mention it's free?
+            <br><br>
+            <img src="images\badge-iphone.png" class="img-iphone" alt="android">
+            <img src="images\badge-android.png" class="img-android" alt="android">
+          </div>    
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>  
+  
+  
+  <nav> 
+      <a href="">About Us</a>
+      <a href="">Support</a>
+      <a href="">Blog</a>
+      <a href="">Press</a>
+      <a href="">API</a>
+      <a href="">Jobs</a>
+      <a href="">Privacy</a>
+      <a href="">Terms</a>
+      <p>&copy; 2014 Instagram</p>
+  </nav>
+    
 </body>
 </html>
