--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,43 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="Instagram" content="Instagram">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header class="header">
+    <img src="images/brand.png" alt="Instagram">
+    <button class="log-in"><a href="#"><img src="images/home.png" alt="Instagram logo">Login</a></button>
+  </header>
+  <section class="description">
+    <div>
+      <h3>Capture and Share the World's Moments</h3>
+      <p>Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.
+  
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      
+        Oh yeah, did we mention it's free?
+      </p>
+      <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+      <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+    </div>
+    <div><img src="images/phones.png" alt="phones"></div>
+  </section>
+  <footer>
+    <ul class="footer">
+      <li>ABOUT US</li>
+      <li>SUPPORT</li>
+      <li>BLOG</li>
+      <li>PRESS</li>
+      <li>API</li>
+      <li>JOBS</li>
+      <li>PRIVACY</li>
+      <li>TERMS</li>
+      <li>© 2014 INSTAGRAM</li>
+    </ul>
+  </footer>
 </body>
 </html>
