--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/starter-code/css/main.css" />
+    <link
+      rel="import"
+      href="https://meyerweb.com/eric/tools/css/reset/reset.css"
+    />
+    <link
+      rel="import"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <title>Instagram</title>
+  </head>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <body>
+    <section class="header">
+      <div>
+        <header>
+          <img src="/starter-code/images/brand.png" alt="Instagram brand" />
+          <div class="login-button">
+            <input
+              type="image"
+              type="button"
+              src="/starter-code/images/home.png"
+            />
+            <label>Log in</label>
+          </div>
+        </header>
+      </div>
+      <div class="phone-images">
+        <img src="/starter-code/images/phones.png" alt="phones" />
+      </div>
+    </section>
+    <section class="instagram-description">
+      <div>
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
+      </div>
+      <div>
+        <p>
+          Instagram is a fast, beautiful and fun way to share your life with
+          friends and family.
+        </p>
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+          world.
+        </p>
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
+      </div>
+      <div class="download-links">
+        <a href="https://apps.apple.com/es/app/instagram/"">
+        <img src="/starter-code/images/badge-iphone.png"
+          alt="Download on the App Store" />
+      </a>
+      <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=es">
+        <img
+          src="/starter-code/images/badge-android.png"
+          alt="Get in on Google play"
+        />
+      </a>
+      </div>
+    </section>
+    <footer class="footer">
+      <div>
+        <nav>
+          <ul class="footer-nav">
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="copyright">
+        &copy; 2014 Instagram
+      </div>
+    </footer>
+  </body>
 </html>
