--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/starter-code/css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container">
+    <header class="header">
+      <nav class="logo-login">
+        <a href="https://www.instagram.com" class="logo-instagram"><img src="/starter-code/images/brand.png" alt="Logo Instagram" class="logo-instagram-img"></a>      
+        <a href="https://www.instagram.com/accounts/login/" class="login-btn"><img src="/starter-code/images/home.png" alt="Login logo"> Log in</a>
+      </nav>
+    </header>
+    <main class="main-context">
+      <section class="mobiles">
+        <img src="/starter-code/images/phones.png" alt="Phones with Instagram">
+      </section>
+      <section class="main-info">
+        <h1 class="title">Capture and Share the World's Moments</h1>
+        <div class="explication">
+          <p class="information">Instagram is a <span class="bold">fast, beautiful</span> and <span class="bold">fun</span> way to share your life with friends and family.</p>
+          <p class="information">Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
+          <p class="information">Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <a href=""><img src="/starter-code/images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href=""><img src="/starter-code/images/badge-android.png" alt="Get it on Google Play" class="logo-download"></a>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <ul class="footer-links">
+        <li><a href="#" class="link-footer">About us</a></li>
+        <li><a href="#" class="link-footer">Support</a></li>
+        <li><a href="#" class="link-footer">Blog</a></li>
+        <li><a href="#" class="link-footer">Press</a></li>
+        <li><a href="#" class="link-footer">API</a></li>
+        <li><a href="#" class="link-footer">Jobs</a></li>
+        <li><a href="#" class="link-footer">Privacy</a></li>
+        <li><a href="#" class="link-footer">Terms</a></li>
+      </ul>
+      <span class="copyright">&copy; 2014 Instagram</span>
+    </footer>
+  </div> 
 </body>
 </html>
