--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="container flex-row">
+    <img src="images/phones.png" alt="phones">
+    <div class="content-container">
+      <header class="flex-row">
+        <h1><img src="images/brand.png" alt="Instagram"></h1>
+        <button class="flex-row">
+          <img src="images/home.png" alt="Home">
+          <span>Log in</span>
+        </button>
+      </header>
+      <div class="content">
+        <h2>Capture and Share the World's Moments</h2>
+        <article>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div class="badges">
+          <img src="images/badge-iphone.png" alt="I Download on the App Store">
+          <img src="images/badge-android.png" alt="Get it on Google Play">
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="footer flex-row">
+    <nav>
+      <a href="#">About us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    </nav>
+    <div>&copy; 2014 Instagram</div>
+  </footer>
 </body>
 </html>
