--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class="container">
+    <section class="content">
+        <img class="image-column" src="images/phones.png">
+        <div class="content-column">
+            <div class="logo-and-login">
+                <img src="images/brand.png">
+                <a class="log-in-button" href=""><img src="images/home.png">Log in</a>
+            </div>
+            <article>
+                <h1>Capture and Share<br> the World's Moments</h1>
+                <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and
+                    family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to
+                    see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+            </article>
+            <div class="app-store-links">
+                <a href="">
+                    <img src="images/badge-iphone.png">
+                </a>
+                <a href="">
+                    <img src="images/badge-android.png">
+                </a>
+            </div>
+        </div>
+    </section>
+</div>
+<section class="footer">
+    <a href="">About Us</a>
+    <a href="">Support</a>
+    <a href="">Blog</a>
+    <a href="">Press</a>
+    <a href="">API</a>
+    <a href="">Jobs</a>
+    <a href="">Privacy</a>
+    <a href="">Terms</a>
+    <span>&copy; 2014 Instagram</span>
+</section>
 </body>
 </html>
