--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -17,26 +17,28 @@
           <img class="phone" src="./images/phones.png" alt="spotify-logo"> 
         </div>
         <div class="caja2"> 
-
-          <div>
-            <img class="spotify-logo" src="./images/brand.png" alt="spotify-logo">
-            <button class="button"> 
-              <img class="spotify-logo" src="./images/home.png" alt="spotify-logo">
-              Log In
-            </button>
-          </div>
+          <section>
+            <img class="spotify-mobile" src="./images/brand.png" alt="spotify-logo">
+              <button class="button"> 
+                <img class="spotify-home" src="./images/home.png" alt="spotify-logo">
+                <p>Log in</p>
+              </button>
+            
+          </section>
 
           <section class="sectionFrame">
             <div class="frame"> 
-              <h4> Instagram </h4>
-              <p>Capture and Share the World's Moments</p>
+              <h1> Capture and Share the World's Moments </h1>
               <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
               <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
               <p>Oh yeah, did we mention it's free?</p>
+              <div class="sectinoAndroidIphone">
+                <img class="spotify-android" src="./images/badge-android.png" alt="spotify-logo">
+                <img class="spotify-iphone" src="./images/badge-iphone.png" alt="spotify-logo">
+              </div>
             </div>  
-          </section>
-
-          </div>
+          </section>  
+        </div>
       </section>
 
       <nav>
@@ -58,12 +60,3 @@
 
 </body>
 </html>
-
-
-<!-- 
-                Download on the App Store
-              Get it on Google Play
-  <img class="spotify-logo" src="./images/badge-android.png" alt="spotify-logo">
-  <img class="spotify-logo" src="./images/badge-iphone.png" alt="spotify-logo">
-  <img class="spotify-logo" src="./images/bgtile.png" alt="spotify-logo">
--->
