--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="./css/main.css" rel="stylesheet" type="text/css">
+
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="containerup">
+    <div class="panel">
+        <div class="phones">
+          <img src="./images/phones.png">
+        </div>
+        <div class="panellogo">
+          <div class="panel-header">
+            <img src="./images/brand.png">
+            <button class="login"><img src="./images/home.png" > Log in</button>
+          </div>
+  
+     <div class="containermiddle">
+            <div id="text">
+              <h3>Capture and Share the World's Moments</h3>
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+                Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
+            </div>
+            <div class="download">
+              <img class="android" src="./images/badge-android.png">
+              <img class="iphone" src="./images/badge-iphone.png">
+            </div>
+          </div>
+        </div>
+      </div>
+   <div class="footer">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="copy">&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+ 
 </body>
+
 </html>
