--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <main class="container">
+    <div class="iphone">
+      <img src="images/phones.png" alt="iphone">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="text">
+      <article>
+        <img src="images/brand.png" alt="brand">
+        <a class="home-button" href="https://www.instagram.com">
+          <div class="home-log-in">
+            <img src="images/home.png" alt="home">
+          </div>
+          <p clas="text-log-in">Log In</p>
+        </a>
+      </article>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <article>
+        <div class="container-text">
+          <img src="images/frame.png" alt="frame">
+          <div class="content-text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+        </div>
+        <div class="badges">
+          <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo">
+            <img src="images/badge-iphone.png" alt="iphone">
+          </a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26ig_mid%3DE09AF0AA-1F26-445B-9F84-C2845F37432D%26utm_content%3Dlo%26utm_medium%3Dbadge">
+            <img src="images/badge-android.png" alt="android">
+          </a>
+        </div>
+      </article>
+    </div>
+  </main>
+  
+  <footer>
+   <ul class="footer">
+     <li><a href="https://about.instagram.com/about-us">About Us</a></li>
+     <li><a href="https://help.instagram.com">Support</a></li>
+     <li><a href="https://business.instagram.com/blog?">Blog</a></li>
+     <li><a href="https://instagram-press.com">Press</a></li>
+     <li><a href="https://www.instagram.com/developer/">API</a></li>
+     <li><a href="https://www.instagram.com/about/jobs/">Jobs</a></li>
+     <li><a href="https://help.instagram.com/519522125107875">Privacy</a></li>
+     <li><a href="https://help.instagram.com/581066165581870">Terms</a></li>
+     <li><a href="">&copy; 2014 Instagram</a></li>
+   </ul> 
+  </footer>
 </body>
 </html>
