--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <main class="main">
+    <section class="phone-image">
+      <img src="images/phones.png" alt="iphones">
+    </section>
+    <section class="all-content">
+        <div class="logo-login-button">
+          <img src="images/brand.png" alt="instagram logo">
+          <button class="login-button">
+            <img src="images/home.png" alt="button house image">
+            Log in
+          </button>
+        </div>
+        <div class="white-box-descriptive">
+          <article class="white-box-descriptive-content">
+            <h1>Capture and Share<br> the World's Moments</h1>
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br></p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br></p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="download-stores">
+              <a href="#"><img src="images/badge-iphone.png" alt="app store button"></a>
+              <a href="#"><img src="images/badge-android.png" alt="google play button"></a>
+            </div>
+          </articleclass="white-box-descriptive">  
+        </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <ul class="footer-links">
+      <li><a href="#">ABOUT US</a></li> 
+      <li><a href="#">SUPPORT</a></li> 
+      <li><a href="#">BLOG</a></li> 
+      <li><a href="#">PRESS</a></li> 
+      <li><a href="#">API</a></li> 
+      <li><a href="#">JOBS</a></li> 
+      <li><a href="#">PRIVACY</a></li> 
+      <li><a href="#">TERMS</a></li> 
+      <li>&copy; 2014 INSTAGRAM</li> 
+    </ul>
+  </footer>
 </body>
 </html>
