--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -36,6 +36,9 @@
             <p>Oh yeah, did we mention it's free?</p>
           </div>
         </div>
+        <div class="space">
+          
+        </div>
         <div class="badges">
           <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo">
             <img src="images/badge-iphone.png" alt="iphone">
