--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <meta charset="utf-8">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css">
+  </head>
 
-  Capture and Share the World's Moments
+  <body>
+    <div id="background">
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <main>
+      <section>
+        <img src="./images/phones.png" alt="smartphones" />
+      </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <section id="content">
+        <img src="./images/brand.png" alt="Instagram logo" />
+        
+        <div id="login">
+          <img id="home-icon" src="./images/home.png" alt="home icon" />
+          <a href="https://www.instagram.com/accounts/login/">Log&nbsp;in</a>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div id="frame">
+          <div id="call-to-action">
+            <h1>Capture and Share</h1>
+            <h1>the World's Moments</h1>
 
-  Download on the App Store
-  Get it on Google Play
+            <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+  
+            <a href="https://apps.apple.com/us/app/instagram/id389801252">
+              <img class="button" src="./images/badge-iphone.png" alt="Download on the App Store" />
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_US">
+              <img class="button" src="./images/badge-android.png" alt="Get it on Google Play" />
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <footer>
+      <ul>
+        <li><a href="">About&nbsp;Us</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Press</a></li>
+        <li><a href="">API</a></li>
+        <li><a href="">Jobs</a></li>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Terms</a></li>
+        <li id="copyright">&copy;&nbsp;2014&nbsp;Instagram</li>
+      </ul>
+    </footer>
+  </body>
 </html>
