--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="flex center screen">
+    <section class="flex"><img src="./images/phones.png" alt="Iphones"></section>
+    <section class="flex right_part">
+      <div class=" flex instagram_line">
+        <img src="./images/brand.png" alt="Instagram">
+        <button class="rounded flex center"><img src="./images/home.png" alt="Log in"> Log in</button>
+      </div>
+      <div class="text rounded">
+        <h2>Capture and Share <br>the World's Moments</h2>
+        <p>Instagram is a <strong>fast, beautiful and fun</strong> way to share your life with friends and family.</p>
 
-  Capture and Share the World's Moments
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Oh yeah, did we mention it's free?</p>
+        <div class="flex"><img class="margin-right" src="./images/badge-iphone.png" alt="Download on the App Store"><img
+            src="./images/badge-android.png" alt="Get it on Google Play"></div>
+      </div>
+    </section>
+    <!-- <img src="./images/bgtile.png" alt="shadow"> -->
+  </div>
+  <footer>
+    <a href="">ABOUT US</a>
+    <a href="">SUPPORT</a>
+    <a href="">BLOG</a>
+    <a href="">PRESS</a>
+    <a href="">API</a>
+    <a href="">JOBS</a>
+    <a href="">PRIVACY</a>
+    <a href="">TERMS</a>
+    <a class="copyright" href="copyright Instagram">&copy; 2014 Instagram</a>
+  </footer>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+
+
+
+
+
+
+
+
 </body>
+
 </html>
