--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,60 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <table>
+    <tr>
+      <th rowspan="2"> <img id="phones" src="./images/phones.png" alt=""> </th>
+      <th id="logoCell">
+        <img src="./images/brand.png" alt="">
+        <div id="LogIn"><img src="./images/home.png" alt=""> Log in</div>
+      </th>
+    </tr>
+    <tr>
+      <td id="presentationCell">
+        <h1>Capture and Share <br> the World's Moments</h1>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>way</strong> to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.       </p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <img src="./images/badge-iphone.png" alt="">
+          <img id="android" src="./images/badge-android.png" alt="">
+        </div>
+      </td>
+    </tr>
+</table>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<div id="div1"></div>
+<div id="div2"></div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li id="CR">&copy; 2014 Instagram</li>
+  </ul> 
+</footer>
 
-  &copy; 2014 Instagram
+
+
+  
+
+  
+
+
+
+  
 </body>
 </html>
